Removed obsolete JX template, reduced widget size to avoid wrapping
git-svn-id: https://svn.apache.org/repos/asf/lenya/trunk@535296 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/webapp/lenya/resources/css/forms.css
+++ b/src/webapp/lenya/resources/css/forms.css
@@ -41,6 +41,11 @@ td.lenya-entry-caption h2{
     font-family: Verdana, sans-serif;
 }
 
+.lenya-form-element-verynarrow {
+    width: 100px;
+    font-family: Verdana, sans-serif;
+}
+
 .lenya-form-message-error {
     font-weight: bold;
     color: red;
